small adjustments, auto zoom